database/k8_resources/db_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-dep
  namespace: database
spec:
  selector:
    matchLabels:
      app: database-app
  replicas: 1
  template:
    metadata:
      labels:
        app: database-app
    spec:
      containers:
        - name: database
          image: postgres:13.15
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
