database/k8_resources/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: database
spec:
  type: ClusterIP
  selector:
    app: database-app
  ports:
    - port: 5432
      targetPort: 5432
