database/k8_resources/db_ui_service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-ui-svc
  namespace: database
spec:
  type: ClusterIP
  selector:
    app: database-ui-app
  ports:
    - port: 80
      targetPort: 80
