database/k8_resources/db_ui_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ui-ing
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header X-Script-Name /pgadmin;
spec:
  rules:
  - http:
      paths:
      - path: /pgadmin
        pathType: ImplementationSpecific
        backend:
          service:
            name: database-ui-svc
            port:
              number: 80
